manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caara-races-website
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: caddy
          image: docker.io/caddy:2
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: caddy-config
              mountPath: /config
            - name: caddy-data
              mountPath: /data
            - name: caara-caddyfile
              mountPath: /etc/caddy
            - name: caddy-bin
              mountPath: /caddy
            - name: caara-content
              mountPath: /srv
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          command:
            - /caddy/caddy
            - run
            - --config
            - /etc/caddy/Caddyfile
            - --adapter
            - caddyfile

        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.7.1
          args:
            - --http-address=0.0.0.0:4180
            - --provider=keycloak-oidc
            - --email-domain=*
            - --upstream=static://200
            - --skip-provider-button=true
            - --cookie-secure=true
            - --cookie-samesite=lax
            - --reverse-proxy=true
            - --whitelist-domain=.oddbit.com
            - --code-challenge-method=S256
            - --skip-jwt-bearer-tokens=true
            - --extra-jwt-issuers=https://auth.oddbit.com/realms/caara-races=caara-races-deployer
            - --oidc-extra-audience=caara-races-deployer
            - --oidc-email-claim=preferred_username
            - --allowed-group=/approved
          ports:
            - containerPort: 4180
              name: oauth2
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "64Mi"
              cpu: "100m"

        - name: rclone
          image: docker.io/rclone/rclone
          args:
            - serve
            - webdav
            - /srv
            - --addr
            - :9000
          ports:
            - containerPort: 9000
              name: webdav
          volumeMounts:
            - name: caara-content
              mountPath: /srv
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "64Mi"
              cpu: "100m"

      volumes:
        - name: caddy-bin
          emptyDir: {}
        - name: caddy-config
          emptyDir: {}
        - name: caddy-data
          emptyDir: {}
        - name: caara-caddyfile
          configMap:
            name: caara-caddyfile
        - name: caara-content
          persistentVolumeClaim:
            claimName: caara-content
