manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caara-races-website
spec:
  ports:
    - port: 8080
      targetPort: http
      name: http
