manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caara-races-website
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production-http01
spec:
  tls:
    - hosts:
        - caara-races-dev.oddbit.com
      secretName: caara-races-website-tls
  rules:
    - host: caara-races-dev.oddbit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caara-races-website
                port:
                  number: 8080
